Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-13090

QTextOption SuppressColors tag breaks subscript and superscript in rich text

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.8.0
    • 4.7.0
    • GUI: Text handling
    • None
    • 22ee6863458885c900e8294a44bd782acbdd8201

    Description

      Setting the QTextOption::SuppressColors tag on a QTextDocument breaks subscript and superscript in rich text.

      See example attached.

      Attachments

        1. subsup-bug.png
          subsup-bug.png
          14 kB
        2. test.cpp
          0.7 kB

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              jiang Jiang Jiang
              bodson Yann Bodson (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes