Keep other text format with QTextOption::SuppressColors tag on

Setting the QTextOption::SuppressColors tag on a QTextDocument
breaks all text format, not just colors. This patch fix this by
selectively ignoring color properties in the format and keeping
other properties.

Task-number: QTBUG-13090
Reviewed-by: Eskil