src/gui/text/qtextlayout.cpp
@@ -2258,8 +2258,12 @@ void QTextLine::draw(QPainter *p, const QPointF &pos, const QTextLayout::FormatR
         QTextCharFormat format;
 
         if (eng->hasFormats() || selection) {
-            if (!suppressColors)
-                format = eng->format(&si);
+            format = eng->format(&si);
+            if (suppressColors) {
+                format.clearForeground();
+                format.clearBackground();
+                format.clearProperty(QTextFormat::TextUnderlineColor);
+            }
             if (selection)
                 format.merge(selection->format);
 
